// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareIssue renders when busy 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={false}
  caret={true}
  className="share-issue btn-sm btn btn-default"
  disabled={false}
  keepMenuOpen={true}
  onOpen={[Function]}
  shouldIgnoreClickOutside={[Function]}
  title={
    <div
      style={
        Object {
          "marginRight": 4,
        }
      }
    >
      <ForwardRef(render)
        center={true}
        truncate={true}
      >
        <IndicatorDot />
        Share
      </ForwardRef(render)>
    </div>
  }
>
  <li
    style={
      Object {
        "padding": "12px 18px",
      }
    }
  >
    <SpreadLayout
      style={
        Object {
          "marginBottom": undefined,
        }
      }
    >
      <SmallHeading>
        Enable public share link
      </SmallHeading>
      <ForwardRef
        size="sm"
        toggle={[Function]}
      />
    </SpreadLayout>
  </li>
</DropdownLink>
`;

exports[`ShareIssue renders when not shared 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={false}
  caret={true}
  className="share-issue btn-sm btn btn-default"
  disabled={false}
  keepMenuOpen={true}
  onOpen={[Function]}
  shouldIgnoreClickOutside={[Function]}
  title={
    <div
      style={
        Object {
          "marginRight": 4,
        }
      }
    >
      <ForwardRef(render)
        center={true}
        truncate={true}
      >
        <IndicatorDot
          active={false}
        />
        Share
      </ForwardRef(render)>
    </div>
  }
>
  <li
    style={
      Object {
        "padding": "12px 18px",
      }
    }
  >
    <SpreadLayout
      style={
        Object {
          "marginBottom": undefined,
        }
      }
    >
      <SmallHeading>
        Enable public share link
      </SmallHeading>
      <ForwardRef
        isActive={false}
        size="sm"
        toggle={[Function]}
      />
    </SpreadLayout>
  </li>
</DropdownLink>
`;

exports[`ShareIssue renders when shared  1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={false}
  caret={true}
  className="share-issue btn-sm btn btn-default"
  disabled={false}
  keepMenuOpen={true}
  onOpen={[Function]}
  shouldIgnoreClickOutside={[Function]}
  title={
    <div
      style={
        Object {
          "marginRight": 4,
        }
      }
    >
      <ForwardRef(render)
        center={true}
        truncate={true}
      >
        <IndicatorDot
          active={true}
        />
        Share
      </ForwardRef(render)>
    </div>
  }
>
  <li
    style={
      Object {
        "padding": "12px 18px",
      }
    }
  >
    <SpreadLayout
      style={
        Object {
          "marginBottom": 12,
        }
      }
    >
      <SmallHeading>
        Enable public share link
      </SmallHeading>
      <ForwardRef
        isActive={true}
        size="sm"
        toggle={[Function]}
      />
    </SpreadLayout>
    <ShareUrlContainer
      isSharing={true}
      onCancel={[Function]}
      onConfirming={[Function]}
      onShare={[Function]}
      onToggle={[Function]}
      shareUrl="http://sentry.io/share/test/"
    />
  </li>
</DropdownLink>
`;
